# halo2-starter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: proof.yml  tests.yml
circuits/: Cargo.toml
circuits/src/chips/: range_check.rs
circuits/src/circuits/: dummy_circuit.rs  mod.rs
circuits/tests/: cheater.rs  circuit_graph.rs  prove.rs
contracts/: foundry.toml
contracts/src/: MyContract.sol  Verifier.sol  VerifyingKey.sol
contracts/src/interfaces/: IVerifier.sol
contracts/test/: MyContract.t.sol
proof/: Cargo.toml
proof/examples/: generate_proof.rs  generate_verifier_solidity.rs  verify_proof.rs
proof/src/: lib.rs  prove.rs  verify.rs
proof/tests/: prove.rs
