[workspace]
members = ["circuits", "proof"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["teddav <https://github.com/teddav>"]
homepage = "https://github.com/teddav/halo2-starter"
repository = "https://github.com/teddav/halo2-starter"
description = "Easy setup for Halo2 ZK circuits"
categories = ["cryptography"]
keywords = ["halo2", "cryptography", "zkp", "zero-knowledge"]

[workspace.dependencies]
# halo2_proofs = { git = "https://github.com/teddav/halo2", branch = "feat-forge-proof-mockprover", features = [
#     "dev-graph",
#     "plotters",
# ] }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0", features = [
    "dev-graph",
    "plotters",
] }
halo2_solidity_verifier = { git = "https://github.com/privacy-scaling-explorations/halo2-solidity-verifier", rev = "f0626be" }

halo2-starter-proof = { path = "proof" }
halo2-starter-circuits = { path = "circuits" }

[patch.'https://github.com/privacy-scaling-explorations/halo2.git']
halo2_proofs = { path = "./halo2pse/halo2_proofs" }

[patch.'https://github.com/privacy-scaling-explorations/halo2-solidity-verifier']
halo2_solidity_verifier = { path = "./halo2-solidity-verifier" }
