[package]
name = "halo2-starter-proof"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true

# default-run = "prove"

# [[bin]]
# name = "prove"
# path = "src/prove.rs"

# [[bin]]
# name = "verify"
# path = "src/verify.rs"

[dependencies]
halo2_proofs.workspace = true
halo2_solidity_verifier.workspace = true
rand.workspace = true

halo2-starter-circuits.workspace = true
