[package]
name = "halo2-starter-proof"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true

# default-run = "prove"

# [[bin]]
# name = "prove"
# path = "src/prove.rs"

# [[bin]]
# name = "verify"
# path = "src/verify.rs"

[dependencies]
halo2_proofs.workspace = true
halo2_solidity_verifier.workspace = true

rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
hex = "0.4.3"
serde_json = "1.0.117"
anyhow = "1.0.86"

halo2-starter-circuits.workspace = true
